[project]
name = "grainfather"
version = "1.1.0"
authors = [
  { name="Hannes Ellinger", email="hannes.ellinger@posteo.de" },
]
description = "A Python library for controlling a Grainfather G30 via Bluetooth LE"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "bleak",
    "xmltodict",
]

[project.urls]
"Homepage" = "https://github.com/elli89/python-grainfather"
"Bug Tracker" = "https://github.com/elli89/python-grainfather/issues"
